# duckling

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
duckling/: __init__.py  connection.py  document.py  fields.py  init.py  operators.py  query.py
examples/: full_example.py  sync_example.py
src/duckling/: __init__.py  connection.py  exceptions.py
tests/: conftest.py  models.py  test_connection.py  test_custom_id.py  test_document.py  test_duckling.py  test_fields.py  test_init.py  test_operators.py  test_query.py
