[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckling-orm"
version = "0.0.2"
description = "A Beanie-inspired ORM for DuckDB — async-first, Pydantic-powered."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Duckling Contributors"},
]
keywords = ["duckdb", "orm", "pydantic", "async", "beanie"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    "duckdb>=0.9.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/carbonbits/duckling"
Repository = "https://github.com/carbonbits/duckling"
Issues = "https://github.com/carbonbits/duckling/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pre-commit>=3.5",
    "ruff>=0.6",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["duckling*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version}"
tag_format = "v{version}"
major_on_zero = false
allow_zero_version = true

# Treat `refactor:` commits as patch releases (defaults bump only on fix/perf).
[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
upload_to_vcs_release = true
